Bugfix: The equalizer dialog did not discard changes when clicking "Cancel".

Many thanks to Anton Gritsay <anton@angri.ru> for the patch.

BUG: 242730